[project]
name = "agenticai"
version = "0.1.0"
description = " description "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-groq>=0.3.7",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.6",
    "langgraph-cli[inmem,inmen]>=0.4.0",
    "langsmith>=0.4.15",
    "python-dotenv>=1.1.1",
    "typing-extensions>=4.14.1",
]

[tool.uv.workspace]
members = [
    "MCPLangchain",
]
